<resources>
    <string name="app_name">Dcrypt</string>
    <string name="powered_By_coinbase">Coinbase</string>
    <string name="powered_By">Powered By</string>
    <string name="Sign">Sign In</string>
    <string name="loginbtn">Login</string>
    <string name="forgot"><u>Forgot Your Password?</u></string>
    <string name="othersLN">Or sign in with:</string>
    <string name="createUSER"><u>Create an Account</u></string>
    <string name="Register">Register</string>

</resources>