<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/logBACK"
    >

    <TextView
        android:id="@+id/SignText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center"
        android:text="@string/Sign"
        android:textColor="@color/white"
        android:textSize="35dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="20dp"
        android:hint="email"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="20dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LoginBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/HTB"
        android:text="@string/loginbtn"
        android:onClick="onClick"
        android:textColor="@color/logBACK" />

    <TextView
        android:id="@+id/create_user"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/LoginBTN"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/createUSER"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgotPASS"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/create_user"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:onClick="onClick"
        android:text="@string/forgot"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/others"
        android:text="@string/othersLN"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_above="@id/SocialIcons"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:id="@+id/SocialIcons"
        >
        <ImageView
            android:id="@+id/googleBTN"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/google"
            android:layout_margin="20dp"
            android:onClick="onClick"
            />
        <ImageView
            android:id="@+id/facebookBTN"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/facebook"
            android:layout_margin="20dp"
            android:onClick="onClick"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_centerInParent="true"/>





</RelativeLayout>